support/acm-deployment/base/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-cafe-core
  labels:
    app: quarkus-cafe-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-cafe-core
  template:
    metadata:
      name: quarkus-cafe-core-deployment
      labels:
        app:  quarkus-cafe-core
        app.kubernetes.io/component: quarkus-cafe-core
        app.kubernetes.io/instance: quarkus-cafe-core
        app.kubernetes.io/part-of: quarkus-cafe
        quarkus-cafe: ""
        app.openshift.io/runtime-namespace: quarkus-cafe-demo
    spec:
      containers:
        - name: quarkus-cafe-core
          image: jeremydavis/quarkus-cafe-core:2.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-cafe-customermocker
  labels:
    app: quarkus-cafe-customermocker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-cafe-customermocker
  template:
    metadata:
      name: quarkus-cafe-customermocker-deployment
      labels:
        app:  quarkus-cafe-customermocker
        app.kubernetes.io/component: quarkus-cafe-customermocker
        app.kubernetes.io/instance: quarkus-cafe-customermocker
        app.kubernetes.io/part-of: quarkus-cafe
        quarkus-cafe: ""
        app.openshift.io/runtime-namespace: quarkus-cafe-demo
    spec:
      containers:
        - name: quarkus-cafe-customermocker
          image: jeremydavis/quarkus-cafe-customermocker:2.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-cafe-kitchen
  labels:
    app: quarkus-cafe-kitchen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-cafe-kitchen
  template:
    metadata:
      name: quarkus-cafe-kitchen-deployment
      labels:
        app:  quarkus-cafe-kitchen
        app.kubernetes.io/component: quarkus-cafe-kitchen
        app.kubernetes.io/instance: quarkus-cafe-kitchen
        app.kubernetes.io/part-of: quarkus-cafe
        quarkus-cafe: ""
        app.openshift.io/runtime-namespace: quarkus-cafe-demo
    spec:
      containers:
        - name: quarkus-cafe-kitchen
          image: jeremydavis/quarkus-cafe-kitchen:2.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-cafe-web
  labels:
    app: quarkus-cafe-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-cafe-web
  template:
    metadata:
      name: quarkus-cafe-web
      labels:
        app: quarkus-cafe-web
        app.kubernetes.io/component: quarkus-cafe-web
        app.kubernetes.io/instance: quarkus-cafe-web
        app.kubernetes.io/part-of: quarkus-cafe
        quarkus-cafe: ""
        app.openshift.io/runtime-namespace: quarkus-cafe-demo
    spec:
      containers:
        - name: quarkus-cafe-web
          image: jeremydavis/quarkus-cafe-web:2.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
