support/acm-deployment/base/route.yaml
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: quarkus-cafe-web
      app.kubernetes.io/component: quarkus-cafe-web
      app.kubernetes.io/instance: quarkus-cafe-web
      app.kubernetes.io/name: ""
      app.kubernetes.io/part-of: quarkus-cafe
      app.openshift.io/runtime: ""
      app.openshift.io/runtime-version: latest
      jeremydavis/quarkus-cafe-web: ""
    name: quarkus-cafe-web
    namespace: quarkus-cafe-demo
  spec:
    host: quarkus-cafe-web-quarkus-cafe-demo.apps.ocp4.example.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: quarkus-cafe-web
      weight: 100
    wildcardPolicy: None
